--- a/testi.html
+++ b/testi.html
@@ -3,8 +3,7 @@
     <title>Welcome wanker!</title>
   </head>
 <body>
-Hei sinä hikoileva möhömaha!
-
-olet ruma!
+<h1>Hei sinä hikoileva möhömaha!</h1>
+<p1>Sähän olet ruma!</p1>
 </body>
 </html>  
