--- a/Public/testi.html
+++ b/Public/testi.html
@@ -3,7 +3,21 @@
     <title>Welcome wanker!</title>
   </head>
 <body>
+  
+  <form action="DCSS.php" method="post">
+    Etunimi: <input type="text" name="etunimi"><br>
+    Sukunimi: <input type="text" name="sukunimi"><br>
+    Ryhmä: <input type="text" name="ryhmä"><br>
+    Sähköposti: <input type="text" name="sähköposti"><br>
+    Puhelin: <input type="text" name="puhelin"><br>
+    Otsikko: <input type="text" name="otsikko"><br>
+    Viesti: <input type="text" name="viesti"><br>
+    Tag:
+    <input type="radio" name="tag" value="peliserveri">Peliserveri
+    <input type="radio" name="tag" value="nettisivu">Nettisivu
+    <br><br>
+  </form>
 <h1>Hei sinä hikoileva möhömaha!</h1>
-<p1>Sähän olet ruma! Terveisin Aarni!</p1>
+<p1>Sähän olet ruma nörtti! Terveisin Aarni the Master!</p1>
 </body>
 </html>  
