--- a/Public/testi.html
+++ b/Public/testi.html
@@ -8,13 +8,13 @@
 <p1>Hei, kun metsään huutaa, niin DC vastaa.</p1>
 
   <form action="DCSS.php" method="post">
-    Etunimi: <input type="text" name="etunimi"><br>
-    Sukunimi: <input type="text" name="sukunimi"><br>
-    Ryhmä: <input type="text" name="ryhmä"><br>
-    Sähköposti: <input type="text" name="sähköposti"><br>
-    Puhelin: <input type="text" name="puhelin"><br>
-    Otsikko: <input type="text" name="otsikko"><br>
-    Viesti: <input type="text" name="viesti"><br>
+    Etunimi:    <input type="text" name="etunimi"><br><br>
+    Sukunimi:   <input type="text" name="sukunimi"><br><br>
+    Ryhmä:      <input type="text" name="ryhmä"><br><br>
+    Sähköposti: <input type="text" name="sähköposti"><br><br>
+    Puhelin:    <input type="text" name="puhelin"><br><br>
+    Otsikko:    <input type="text" name="otsikko"><br><br>
+    Viesti:     <input type="text" name="viesti"><br><br>
     Tag:
     <input type="radio" name="tag" value="peliserveri">Peliserveri
     <input type="radio" name="tag" value="nettisivu">Nettisivu
