--- a/Public/testi.html
+++ b/Public/testi.html
@@ -5,20 +5,21 @@
 <body>
 
 <h1>Data Center Support System</h1>
-<p1>Hei, kun metsään huutaa, niin DC vastaa.</p1>
+<p1>Hei, kun metsään huutaa, niin DC vastaa.</p1><br><br>
 
   <form action="DCSS.php" method="post">
-    Etunimi:    <input type="text" name="etunimi"><br><br>
-    Sukunimi:   <input type="text" name="sukunimi"><br><br>
-    Ryhmä:      <input type="text" name="ryhmä"><br><br>
+    Etunimi: <input type="text" name="etunimi"><br><br>
+    Sukunimi: <input type="text" name="sukunimi"><br><br>
+    Ryhmä: <input type="text" name="ryhmä"><br><br>
     Sähköposti: <input type="text" name="sähköposti"><br><br>
-    Puhelin:    <input type="text" name="puhelin"><br><br>
-    Otsikko:    <input type="text" name="otsikko"><br><br>
-    Viesti:     <input type="text" name="viesti"><br><br>
+    Puhelin: <input type="text" name="puhelin"><br><br>
+    Otsikko: <input type="text" name="otsikko"><br><br>
+    Viesti: <textarea name="viesti" rows="5" cols="40"></textarea><br><br>
     Tag:
     <input type="radio" name="tag" value="peliserveri">Peliserveri
     <input type="radio" name="tag" value="nettisivu">Nettisivu
     <br><br>
+    <input type="submit">
   </form>
 
 </body>
