--- a/Public/testi.html
+++ b/Public/testi.html
@@ -70,7 +70,7 @@ $tag = testi($_POST["tag"]);
 <p1>Hei, kun metsään huutaa, niin DC vastaa.</p1><br>
 <p2><span class="error">* pakollinen kenttä.</span></p2><br><br>
 
-  <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
+  <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>
     Etunimi: <input type="text" name="etunimi">
     <span class="error">* <?php echo $etunimiErr;?></span>
     <br><br>
