--- a/Public/testi.html
+++ b/Public/testi.html
@@ -1,9 +1,7 @@
 <html>
   <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
     <title>DCSS</title>
-    <style>
-      .error {color: #FF0000;}
-    </style>
   </head>
 <body>
 
