--- a/Public/testi.html
+++ b/Public/testi.html
@@ -7,7 +7,7 @@
 
 <?php
 $etunimiErr = $sukunimiErr = $ryhmäErr = $sähköpostiErr = $puhelinErr = $otsikkoErr = $tagErr = "";
-$etunimi = $sukunimi = $ryhmä = $sähköposti = $puhelin = $otsikko = $tag = "";
+$etunimi = $sukunimi = $ryhmä = $sähköposti = $puhelin = $otsikko = $viesti = $tag = "";
 
 if ($_SERVER["REQUEST_METHOD"] == "POST") {
 if (empty($_POST["etunimi"])) {
