--- a/Public/testi.html
+++ b/Public/testi.html
@@ -75,7 +75,7 @@ function testi($data) {
 <p1>Hei, kun metsään huutaa, niin DC vastaa.</p1><br><br>
 <p2><span class="error">* pakollinen kenttä.</span></p2><br><br>
 
-  <form class="form-horisontaalinen" role="form" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>
+  <form method="post" action="yhteys.php">
 	<label class="otsikko">Etunimi:</label>
 	<div class="kenttä">
 	<input type="text" name="etunimi" placeholder="Etunimi">
