--- a/Public/testi.html
+++ b/Public/testi.html
@@ -91,7 +91,7 @@ function testi($data) {
 	<input type="text" name="ryhmä" placeholder="Ryhmätunnus">
 	<span class="error">* <?php echo $ryhmäErr;?></span>
 	</div><br>
-    <label class="otsikko">Sähköposti:</label>
+    	<label class="otsikko">Sähköposti:</label>
 	<div class="kenttä">
 	<input type="text" name="sähköposti" placeholder="nimi@kamk.fi">
 	<span class="error">* <?php echo $sähköpostiErr;?></span>
@@ -111,11 +111,27 @@ function testi($data) {
 	<span class="error">* <?php echo $viestiErr;?></span>
 	</div><br>
 	Tag:
-    <input type="radio" name="tag" value="peliserveri">Peliserveri
-    <input type="radio" name="tag" value="nettisivu">Nettisivu
+    	<input type="radio" name="tag" value="peliserveri">Peliserveri
+    	<input type="radio" name="tag" value="nettisivu">Nettisivu
 	<span class="error">* <?php echo $tagErr;?></span>
 	<br><br>
     <input type="submit" value="Lähetä">
   </form>
 </body>
 </html>
+
+/*testaus*/
+echo "<h2>Syöttämäsi tiedot:</h2>;
+echo $etunimi;
+echo <br>
+echo $sukunimi
+echo <br>
+echo $ryhmä
+echo <br>
+echo $sähköposti
+echo <br>
+echo $puhelin
+echo <br>
+echo $otsikko
+echo <br>
+echo $viesti
