lisää mokia näin aamusta

--- a/Public/testi.html
+++ b/Public/testi.html
@@ -117,7 +117,8 @@ function testi($data) {
 	<br><br>
     <input type="submit" value="Lähetä">
   </form>
-  
+ 
+ <?php 
   /*testaus*/
 echo "<h2>Syöttämäsi tiedot:</h2>;
 echo $etunimi;
@@ -133,6 +134,7 @@ echo <br>
 echo $otsikko
 echo <br>
 echo $viesti
+  ?>
   
 </body>
 </html>
